--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
 <style>
 
 </style>
+<title>OPmine3</title>
 </head>
 <body>
 <center>
-  <h1 style="font-family:verdana">OP</h1>
+  <text style="font-family:arial; font-size:50px;"><b style="color:#A52A2A;">OP</b><strong style="color:#008B8B;">mine</strong>3</text>
   </center>
 <script>
 
