--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body>
 <center>
   <text style="font-family:arial; font-size:50px;"><b style="color:#A52A2A;">OP</b><strong style="color:#008B8B;">mine</strong>3</text>
+  Website being developed...
   </center>
 <script>
 
