--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ body, html {
 
 <div class="bg-text">
     <text style="font-family:arial; font-size:50px;"><b style="color:#A52A2A;">OP</b><strong style="color:#008B8B;">mine</strong>3</text>
-  <p>And I'm a Photographer</p>
+  <p>Website made by Thbop</p>
 </div>
 
 </body>
