--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@ body, html {
 
 /* Position text in the middle of the page/image */
 .bg-text {
-  background-color: rgb(0,0,0); /* Fallback color */
-  background-color: rgba(0,0,0, 0.4); /* Black w/opacity/see-through */
+  background-color: rgb(100,100,100); /* Fallback color */
+  background-color: rgba(100,100,100, 1); /* Black w/opacity/see-through */
   color: black;
   font-weight: bold;
-  border: 3px solid #f1f1f1;
+  border: 3px solid #A52A2A;
   position: absolute;
   top: 50%;
   left: 50%;
