--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@ body, html {
   height: 100%; 
   
   /* Center and scale the image nicely */
+  background-attachment: fixed;
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
@@ -45,7 +46,13 @@ body, html {
   width: 80%;
   padding: 20px;
   text-align: center;
-}
+  }
+  
+.block {
+  height:10000px;
+  background-image:linear-gradient(#8A2BE2, #9932CC, #5F9EA0, #6495ED, #008B8B, #D2691E, #FFA500);
+	}
+
 </style>
 </head>
 <body>
@@ -56,6 +63,7 @@ body, html {
     <text style="font-family:arial; font-size:50px;"><b style="color:#A52A2A;">OP</b><strong style="color:#008B8B;">mine</strong>3</text>
   <p>Website made by Thbop</p>
 </div>
+<div class="block"></div>
 
 </body>
 </html>
