--- a/rules.html
+++ b/rules.html
@@ -31,9 +31,21 @@ Some of the code was copied and pasted from w3schools.
 <div class="nav"><br><center>
 <a href="index.html" class="button">Home</a>
 <a href="staff.html" class="button">Staff</a>
-<a href="about.html" class="button">About</a>
+<a href="about.html" class="button">About</a><br><br><br>
 </center>
 </div>
+<div class="info_box">
+<ol style="padding:50px; font-size:20px; color:#F0F8FF;">
+  <li>No swearing (at least not too much)</li>
+  <li>No hacking, this will result in a warn/ban</li>
+  <li>No abusing any bug/glitch, this will result in a warn</li>
+  <li>No spam pinging, or pinging anyone who doesn't want to be ping, such as Notyour_mom</li>
+  <li>No spamming or spawn killing</li>
+  <li>No spamming</li>
+  <li>Be respectful to staff</li>
+</ol> 
+</div>
+
 
 </body>
 </html>
