--- a/about.html
+++ b/about.html
@@ -19,6 +19,7 @@ Some of the code was copied and pasted from w3schools.
   /* Remove the blur effect */
   filter: blur(0px);
   -webkit-filter: blur(0px);
+   background-image: url("wide_sun.png");
 }
 </style>
 
@@ -29,11 +30,13 @@ Some of the code was copied and pasted from w3schools.
 
 <!--Navigation bar-->
 <div class="nav"><br><center>
-<a href="index.html" class="button">Home</a>
+<a href="rules.html" class="button">Rules</a>
 <a href="staff.html" class="button">Staff</a>
-<a href="about.html" class="button">About</a>
+<a href="index.html" class="button">Home</a>
 </center>
 </div>
+
+<div class="info_box">Nothing here yet</div>
 
 </body>
 </html>
