--- a/staff.html
+++ b/staff.html
@@ -19,7 +19,13 @@ Some of the code was copied and pasted from w3schools.
   /* Remove the blur effect */
   filter: blur(0px);
   -webkit-filter: blur(0px);
+  background-image: url("total.png");
 }
+
+.info_box {
+  -ms-transform: translate(-50%, -60%);
+  transform: translate(-50%, -60%);
+	}
 </style>
 
   <title>OPmine3 -> Rules</title>
@@ -29,10 +35,29 @@ Some of the code was copied and pasted from w3schools.
 
 <!--Navigation bar-->
 <div class="nav"><br><center>
+<a href="rules.html" class="button">Rules</a>
 <a href="index.html" class="button">Home</a>
-<a href="staff.html" class="button">Staff</a>
 <a href="about.html" class="button">About</a>
 </center>
+</div>
+
+<div class="info_box">
+
+<li>Owner: m200h</li>
+<li>Co-Owner: Skriptive</li>
+<li>Co-Owner: im not your mom (discord name)</li>
+<li>Manager: ItsDark_Knight</li>
+<li>Manager: !A HothifaFA (discord name)</li>
+<li>Admin: Wolflexx</li>
+<li>Admin: spoky333</li>
+<li>Admin: TimeAlex</li>
+<li>Admin: AgentGamezYT</li>
+<li>Mod: Swiikie (discord name)</li>
+<li>Builder: smite (discord name)</li>
+<li>Builder: Thbop</li>
+<li>Helper: Fuzzyboy85</li>
+
+
 </div>
 
 </body>
