--- a/staff.html
+++ b/staff.html
@@ -56,6 +56,8 @@ Some of the code was copied and pasted from w3schools.
 <li>Builder: smite (discord name)</li>
 <li>Builder: Thbop</li>
 <li>Helper: Fuzzyboy85</li>
+	
+Fix yourself WEBSITE!!!!!
 
 
 </div>
