--- a/staff.html
+++ b/staff.html
@@ -28,7 +28,7 @@ Some of the code was copied and pasted from w3schools.
 	}
 </style>
 
-  <title>OPmine3 -> Rules</title>
+  <title>OPmine3 -> Staff</title>
 </head>
 <body class="bg-image">
 
@@ -56,8 +56,6 @@ Some of the code was copied and pasted from w3schools.
 <li>Builder: smite (discord name)</li>
 <li>Builder: Thbop</li>
 <li>Helper: Fuzzyboy85</li>
-	
-Fix yourself WEBSITE!!!!!
 
 
 </div>
