--- a/about.html
+++ b/about.html
@@ -23,7 +23,7 @@ Some of the code was copied and pasted from w3schools.
 }
 </style>
 
-  <title>OPmine3 -> </title>
+  <title>OPmine3 -> About</title>
 </head>
 <body class="bg-image">
 
