--- a/staff.html
+++ b/staff.html
@@ -53,7 +53,7 @@ Some of the code was copied and pasted from w3schools.
 <li>Admin: TimeAlex</li>
 <li>Admin: AgentGamezYT</li>
 <li>Mod: Swiikie (discord name)</li>
-<li>Builder: smite (discord name)</li>
+<li>Builder: sssmite</li>
 <li>Builder: Thbop</li>
 <li>Helper: Fuzzyboy85</li>
 
