--- a/index.html
+++ b/index.html
@@ -63,7 +63,8 @@ Example: A client (browser) sends an HTTP request to the server; then the server
 <div class="block" id="footer">
 <center>
 <h1>OPmine3</h1>
-A Minehut server.
+<a href="https://discord.gg/Ycf3gvQV96" class="button" target="_blank">Discord</a>
+<a href="https://docs.google.com/forms/d/1VuC8bX9yTp3_kTFAO-UQMJAY_vBGYlX73LSOYfedWlE/edit" class="button" target="_blank">Staff Apply</a>
 </center>
 </div>
 
