--- a/index.html
+++ b/index.html
@@ -37,25 +37,21 @@ Some of the code was copied and pasted from w3schools.
 </center>
 </div>
 <!--text block one-->
-<div class="block">Use a container element and add a background image to the container with a specific height. Then use the background-attachment: fixed to create the actual parallax effect. The other background properties are used to center and scale the image perfectly:<br><br>The example above used pixels to set the height of the image. If you want to use percent, for example 100%, to make the image fit the whole screen, set the height of the parallax container to 100%. Note: You must also apply height: 100% to both and Some mobile devices have a problem with background-attachment: fixed. However, you can use media queries to turn off the parallax effect for mobile devices:<br><br>When a browser requests a service from a web server, an error might occur, and the server might return an error code like "404 Not Found".<br><br>
-
-It is common to name these errors HTML error messages.
-<br><br>
-But these messages are something called HTTP status messages. In fact, the server always returns a message for every request. The most common message is 200 OK.
-<br><br>
-Below is a list of HTTP status messages that might be returned:</div>
+<div class="block">Welcome to a world of mining! Mining resources to get better tools, armor, food, and more!<br>
+Wait! That sounds like Minecraft! Well, it is, but different. It's unique. We call it OPmine.<br>
+So what's different, instead of living on the ground, you live on floating islands, and you don't have to look for resources.<br>
+Well.... That kinda sounds boring, and limited. <b>It's not!</b> You wonder why?<br>
+Instead of vanilla items, we play with custom items such as obsidian armor, bedrock pickaxes,<br>
+Magma armor, and MORE!!!</div>
 
 <!--2nd bg img/discord box & button-->
 <div class="wide"></div>
 <div class="card_wide" id="card_wide"><br><a href="https://discord.gg/Ycf3gvQV96" class="discord" id="discord" target="_blank">Join Us On Discord!</a></div>
 
 <!--text block two-->
-<div class="block" id="second">Use a container element and add a background image to the container with a specific height. Then use the background-attachment: fixed to create the actual parallax effect. The other background properties are used to center and scale the image perfectly:<br><br>The example above used pixels to set the height of the image. If you want to use percent, for example 100%, to make the image fit the whole screen, set the height of the parallax container to 100%. Note: You must also apply height: 100% to both and Some mobile devices have a problem with background-attachment: fixed. However, you can use media queries to turn off the parallax effect for mobile devices:<br><br>When a browser requests a service from a web server, an error might occur, and the server might return an error code like "404 Not Found".<br><br>
-The Hypertext Transfer Protocol (HTTP) is designed to enable communications between clients and servers.
-<br><br>
-HTTP works as a request-response protocol between a client and server.
-<br><br>
-Example: A client (browser) sends an HTTP request to the server; then the server returns a response to the client. The response contains status information about the request and may also contain the requested content.
+<div class="block" id="second">We are a kid friendly community, and our server has that small server feel.<br>
+So if you like to join a small, fun, growing community of OPminers check us out on <a href="https://discord.gg/Ycf3gvQV96" style="text-decoration:None; color:#bbb;">Discord</a>!<br>
+
 
 </div>
 <!--Last bg img+footer-->
