--- a/staff.html
+++ b/staff.html
@@ -48,10 +48,10 @@ Some of the code was copied and pasted from w3schools.
 <li>Co-Owner: im not your mom (discord name)</li>
 <li>Manager: ItsDark_Knight</li>
 <li>Manager: !A HothifaFA (discord name)</li>
+<li>Manager: AgentGamezYT</li>
 <li>Admin: Wolflexx</li>
 <li>Admin: spoky333</li>
 <li>Admin: TimeAlex</li>
-<li>Admin: AgentGamezYT</li>
 <li>Mod: Swiikie (discord name)</li>
 <li>Builder: sssmite</li>
 <li>Builder: Thbop</li>
