--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@ So if you like to join a small, fun, growing community of OPminers check us out 
 <center>
 <h1>OPmine3</h1>
 <a href="https://discord.gg/Ycf3gvQV96" class="button" target="_blank">Discord</a>
-<a href="https://docs.google.com/forms/d/1VuC8bX9yTp3_kTFAO-UQMJAY_vBGYlX73LSOYfedWlE/edit" class="button" target="_blank">Staff Apply</a>
+<a href="https://2f5f9b1b403b.ngrok.io" class="button" target="_blank">Staff Apply</a>
 </center>
 </div>
 
