--- a/index.html
+++ b/index.html
@@ -44,16 +44,32 @@ Well.... That kinda sounds boring, and limited. <b>It's not!</b> You wonder why?
 Instead of vanilla items, we play with custom items such as obsidian armor, bedrock pickaxes,<br>
 Magma armor, and MORE!!!</div>
 
-<!--2nd bg img/discord box & button-->
+<div class="custom-shape-divider-top-1629554372">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M321.39,56.44c58-10.79,114.16-30.13,172-41.86,82.39-16.72,168.19-17.73,250.45-.39C823.78,31,906.67,72,985.66,92.83c70.05,18.48,146.53,26.09,214.34,3V0H0V27.35A600.21,600.21,0,0,0,321.39,56.44Z" class="shape-fill"></path>
+    </svg>
+</div>
+
+
+
+<!--2nd bg img-->
 <div class="wide"></div>
-<div class="card_wide" id="card_wide"><br><a href="https://discord.gg/Ycf3gvQV96" class="discord" id="discord" target="_blank">Join Us On Discord!</a></div>
+
+
+
 
 <!--text block two-->
+
+
 <div class="block" id="second">We are a kid friendly community, and our server has that small server feel.<br>
-So if you like to join a small, fun, growing community of OPminers check us out on <a href="https://discord.gg/Ycf3gvQV96" style="text-decoration:None; color:#bbb;">Discord</a>!<br>
-
-
+So if you like to join a small, fun, growing community of OPminers check us out on <a href="https://discord.gg/Ycf3gvQV96" style="text-decoration:None; color:#FFA500;">Discord</a>!<br>
 </div>
+<div class="custom-shape-divider-top-1629555445">
+    <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+        <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+    </svg>
+</div>
+
 <!--Last bg img+footer-->
 <div class="total"></div>
 <div class="block" id="footer">
@@ -61,46 +77,11 @@ So if you like to join a small, fun, growing community of OPminers check us out 
 <h1>OPmine3</h1>
 <a href="https://discord.gg/Ycf3gvQV96" class="button" target="_blank">Discord</a>
 <a href="https://1bb3bd7634da.ngrok.io" class="button">Staff Apply</a>
+<a href="MeMeR_Rexon.html" class="button">Resource Pack</a>
 </center>
 </div>
 
-<!--Fancy js (that I TOTALLY...... wrote- kinda)-->
-<script>
-// When the user scrolls the page, execute myFunction 
-window.onscroll = function() {myFunction()};
-var w = window.innerWidth;
 
-if (w < 1366) {
-	//Make tablet/ipad experience readable
-	document.getElementById("card_wide").style.width = 70 + "%";
-	document.getElementById("card_wide").style.top = 220 + "%";
-	document.getElementById("card_wide").style.transition = "width 0.5s";
-	}
-//Fancy scrolling FX
-function myFunction() {
-  var winScroll = document.body.scrollTop || document.documentElement.scrollTop;
-  var height = document.documentElement.scrollHeight - document.documentElement.clientHeight;
-  var scrolled = (winScroll / height) * 100;
-  //document.getElementById("card_wide").style.width = scrolled-50 + "%";
-  //PC code
-  if (w >= 1366) {
-	  if (scrolled >= 55) {
-	    if (scrolled <= 85) {
-		  document.getElementById("card_wide").style.width = scrolled-30 + "%";
-		  }
-	  }
-  }
-  //Tablet/Ipad code
-  else if (w < 1366) {
-
-	  if (scrolled >= 70) {
-		if (scrolled <= 80) {
-		  document.getElementById("card_wide").style.width = scrolled+10 + "%";
-		    }
-	  }
-	}
-}
-</script>
 
 </body>
 </html>
