--- a/staff.html
+++ b/staff.html
@@ -44,17 +44,24 @@ Some of the code was copied and pasted from w3schools.
 <div class="info_box">
 
 <li>Owner: m200h</li>
-<li>Co-Owner: Skriptive</li>
-<li>Co-Owner: im not your mom (discord name)</li>
+<li>Co-Owner: Wolflexx</li>
+<li>Co-Owner: AgentGamezYT</li>
+<li>Co-Owner: Nb_abood</li>
+<li>Retired: Rvxerse</li>
+
 <li>Manager: ItsDark_Knight</li>
 <li>Manager: !A HothifaFA (discord name)</li>
-<li>Manager: AgentGamezYT</li>
-<li>Admin: Wolflexx</li>
-<li>Admin: spoky333</li>
-<li>Admin: TimeAlex</li>
+<li>Manager: TimeAlex</li>
+<li>Manager: S2AX</li>
+<li>HrAdmin: spoky333</li>
+<li>HrAdmin: Thbop</li>
+
+<li>Mod: MeMeR_Rexon</li>
 <li>Mod: Swiikie (discord name)</li>
+<li>Mod: AlexGamer14 (discord name)</li>
+
 <li>Builder: sssmite</li>
-<li>Builder: Thbop</li>
+
 <li>Helper: Fuzzyboy85</li>
 
 
