--- a/staff.html
+++ b/staff.html
@@ -61,6 +61,7 @@ Some of the code was copied and pasted from w3schools.
 <li>Mod: AlexGamer14 (discord name)</li>
 
 <li>Builder: sssmite</li>
+<li>Builder: lukeskywalker12</li>
 
 <li>Helper: Fuzzyboy85</li>
 
