--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@ So if you like to join a small, fun, growing community of OPminers check us out 
 <h1>OPmine3</h1>
 <a href="https://discord.gg/Ycf3gvQV96" class="button" target="_blank">Discord</a>
 <a href="http://opmine.pythonanywhere.com" class="button">Staff Apply</a>
+<a href="http://opmine.pythonanywhere.com/banappeal" class="button">Ban Appeal</a>
 <a href="MeMeR_Rexon.html" class="button">Resource Pack</a>
 </center>
 </div>
